--- a/ecom/views/display.ejs
+++ b/ecom/views/display.ejs
@@ -62,7 +62,7 @@
                         <% }) %>
                 </div>
                 <%if(Object.keys(products).length === 0){%>
-                    <h1 id="message"> No products yet </h1>
+                    <h1 id="message"> No products yet <img src="https://img.icons8.com/color/48/000000/empty-box.png" /> </h1>
                     <%}%>
                         <div id="se">
 
