--- a/ecom/views/partials/filter.ejs
+++ b/ecom/views/partials/filter.ejs
@@ -2,7 +2,7 @@
     <div class="dropdown">
         <form method="GET" id="form3">
             <input type="text" name="name" placeholder="search">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Filter
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"><img src="https://img.icons8.com/material-outlined/15/000000/filter.png"/>Filter
     <span class="caret"></span></button>
             <ul class="dropdown-menu">
                 <li>
@@ -19,7 +19,7 @@
                 </li>
             </ul>
             <input type="hidden" name="id" value="<%=products[0].categorie%>">
-            <button class="btn btn-warning btn-sm">search</button>
+            <button class="btn btn-warning btn-sm"><img src="https://img.icons8.com/material-outlined/10/000000/search.png"/>search</button>
         </form>
     </div>
     <%}%>
