--- a/ecom/views/partials/header.ejs
+++ b/ecom/views/partials/header.ejs
@@ -31,7 +31,7 @@
                         <li><a href="/register">Signup</a></li>
                         <% }else{ %>
                             <li>
-                                <a href="/cart"><img src="/css/cart.jpg" alt="cart" width="26" height="26"></a>
+                                <a href="/cart"><img src="https://img.icons8.com/color/48/000000/shopping-cart-loaded.png" alt="cart" width="30" height="30" />cart</a>
                             </li>
                             <li><a href="/user">Singned in as
                                 <%= currentUser.username %></a>
