--- a/ecom/public/css/cart.css
+++ b/ecom/public/css/cart.css
@@ -6,8 +6,13 @@
     border-radius: 2%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     text-align: center;
+    margin-bottom: 2%;
 }
 
 .thumbnail {
+    margin-left: 5%;
+}
+
+h1 {
     margin-left: 5%;
 }
