--- a/ecom/public/css/ecom.css
+++ b/ecom/public/css/ecom.css
@@ -43,3 +43,14 @@ body {
     display: table;
     clear: both;
 }
+
+.cards {
+    background-color: rgba(255, 158, 31, 0.562);
+    /* width: 25%; */
+    height: 50%;
+    margin-left: 5%;
+    border-radius: 2%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    text-align: center;
+    margin-bottom: 2%;
+}
